# LibtorchAssist

./: .gitignore  CMakeLists.txt  LibtorchAssist.cpp  LibtorchAssist.h  README.md  array_to_tensor.cpp
src/: CMakeLists.txt  array_to_tensor.cpp  array_to_tensor.h  libtorch_assist.cpp  libtorch_assist.h  mat2tensor.cpp  mat2tensor.h
test/: CMakeLists.txt  main.cpp
