AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_LIBRARY(LibtorchAssist STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(LibtorchAssist ${TORCH_LIBRARIES} ${OpenCV_LIBS}) #

# 拷贝include文件到生成目录
FILE(GLOB HEADER_FILE ./*.h ./*.hpp) #所有头文件存入变量
FOREACH(HEAD ${HEADER_FILE})
    file(COPY ${HEAD} DESTINATION ${PROJECT_BINARY_DIR}/include)
ENDFOREACH(F)